<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/userScoreText"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_user_score"
        app:layout_constraintEnd_toStartOf="@+id/computerScoreText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/computerScoreText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_computer_score"
        app:layout_constraintBaseline_toBaselineOf="@+id/userScoreText"
        app:layout_constraintEnd_toStartOf="@+id/userTurnScoreText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/userScoreText" />

    <TextView
        android:id="@+id/userTurnScoreText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/text_turn_score"
        app:layout_constraintBaseline_toBaselineOf="@+id/computerScoreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/computerScoreText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toTopOf="@+id/hold_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userScoreText"
        app:srcCompat="@drawable/dice1" />

    <Button
        android:id="@+id/roll_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="rollClickHandler"
        android:text="@string/button_roll"
        app:layout_constraintEnd_toStartOf="@+id/hold_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/hold_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="holdClickHandler"
        android:text="@string/button_hold"
        app:layout_constraintBaseline_toBaselineOf="@+id/roll_button"
        app:layout_constraintEnd_toStartOf="@+id/reset_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/roll_button" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="resetClickHandler"
        android:text="@string/button_reset"
        app:layout_constraintBaseline_toBaselineOf="@+id/hold_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/hold_button" />

</androidx.constraintlayout.widget.ConstraintLayout>